Act on warnings arising from Java21